feat(Tool Studio): register default tool bundle
- Add getWeather (wttr.in JSON) via Java URLConnection with timeouts
- Add extractPageContent using Jsoup with junk removal and link markers
- Add googlePseSearch (Google PSE) using env-based credentials
- Add openaiResponseGenerator (OpenAI Responses API) using env-based API key
- Add sendSlackMessage (Slack Incoming Webhook) via Spring WebClient
- Add getCurrentTime with IANA timezone support
- Add buildGoogleCalendarCreateLink for prefilled Calendar "Add event" URLs

Signed-off-by: Jemin Huh <hjm1980@gmail.com>